# mosaiq_presentation_automaton

./: .gitignore  README.md
Project-Plans/: back-end.md  frontend-research.md  openAI.md  project-plan-1-management.md  project-plan-1-setup-core-infrastructure.md  project-plan-2-agent-framework-implementation.md  project-plan-2-management.md  project-plan-3-management.md  (+10 more)
presentation-automator/backend/: .env.example  .gitignore  README.md  README_CONTEXT_INTEGRATION.md  presentations.db  pyproject.toml  run.sh  run_core_tests.sh  run_tests.sh
presentation-automator/backend/src/: __init__.py  main.py
presentation-automator/backend/src/agents/: __init__.py  base.py  content_agent.py  planning_agent.py  presentation_generator.py  tools.py
presentation-automator/backend/src/api/: __init__.py  app.py  async_router.py  presentation_router.py  router.py  upload_router.py  user_router.py
presentation-automator/backend/src/config/: settings.py
presentation-automator/backend/src/middleware/: __init__.py  auth.py  error_handler.py
presentation-automator/backend/src/models/: __init__.py  database.py  schemas.py
presentation-automator/backend/src/services/: __init__.py  cache_service.py  content_extraction.py  document_processor.py  presentation_service.py  storage_service.py  task_manager.py
presentation-automator/backend/src/utils/: __init__.py  context_manager.py  logging.py
presentation-automator/backend/tests/: __init__.py  test_agents.py  test_api.py  test_cache_service.py  test_document_processor.py  test_health.py  test_presentation_api.py  test_task_manager.py  test_upload_api.py  test_user_api.py
(+4 files in other folders)
